crates/facet-styx/src/snapshots/facet_styx__error__tests__unknown_field_diagnostic.snap
---
source: crates/facet-styx/src/error.rs
expression: rendered
---
Error: unknown field 'unknown_field'
   ╭─[test.styx:2:1]
   │
 2 │ unknown_field value
   │ ──────┬──────  
   │       ╰──────── unknown field
───╯
